--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -9,6 +9,7 @@
   --pre-bg-color: #f9f9fd;
   --nav-text-color:#5a5a5a;
   --tag-color: #424242;
+  scroll-padding-top: 70px;
   transition: all .8s;
 }
 
@@ -22,7 +23,6 @@ html[data-theme='dark'] {
   --pre-bg-color:rgb(33,33,45);
   --nav-text-color:rgb(191, 191, 191);
   --tag-color: rgb(191, 191, 191) !important;
-  
 }
 
 html {
@@ -47,6 +47,14 @@ p {
 
 a {
   text-decoration: none;
+}
+
+.footnote-ref::before {
+    content: "";
+    display: block;
+    margin-top: -90px;
+    padding-top: 90px;
+    position: absolute;
 }
 
 .category {
