--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -1,5 +1,11 @@
 <head>
     {{ $style := resources.Get "css/style.css" | resources.Minify | resources.Fingerprint }}
+    <script type="text/javascript">
+        const theme = localStorage.getItem('theme');
+        if (theme === "dark") {
+            document.documentElement.setAttribute('data-theme', 'dark');
+        }
+    </script>
     <title> {{.Site.Params.author}}{{ with .Title }} | {{ . }}{{ end }} </title>
     <meta charset="utf-8">
     {{- hugo.Generator -}}
