--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="{{- site.Language.Lang -}}" data-theme="light">
+<html class="loadHtml" lang="{{- site.Language.Lang -}}" data-theme="light">
     {{- partial "head.html" . -}}
     <body>
         {{- partial "sidebar.html" . -}}
