Fix math rendering

--- a/layouts/partials/math.html
+++ b/layouts/partials/math.html
@@ -1,4 +1,4 @@
-{{- if or (eq site.Params.math true) (eq .Params.math true) -}}
+{{- if or (eq site.Params.math.enable true) (eq .Params.math true) -}}
     {{- $use := "katex" -}}
 
     {{- with site.Params.math -}}
@@ -25,6 +25,14 @@
         {{- $url := "https://cdn.jsdelivr.net/npm/katex@0.11.1/dist/contrib/auto-render.min.js" -}}
         {{- $hash := "sha384-kWPLUVMOks5AQFrykwIup5lo0m3iMkkHrD0uJ4H5cjeGihAutqP0yW0J6dpFiVkI" -}}
         <script defer src="{{- $url -}}" integrity="{{- $hash -}}" crossorigin="anonymous"
-            onload="renderMathInElement(document.body);"></script>
+            onload='renderMathInElement(document.body, {
+                    delimiters: [
+                        {left: "$$", right: "$$", display: true},
+                        {left: "\\[", right: "\\]", display: true},
+                        {left: "$", right: "$", display: false},
+                        {left: "\\(", right: "\\)", display: false}
+                    ]
+                }
+            );'></script>
     {{- end -}}
 {{- end -}}
