--- a/layouts/_default/_markup/render-image.html
+++ b/layouts/_default/_markup/render-image.html
@@ -1,33 +1,63 @@
 <figure>
-	{{ if eq (len (findRE "\\.(gif|jpe?g|tiff|png|webp|bmp)$" .Destination 1)) 1}} <!-- Picture -->
+	 <!-- Picture -->
+	{{ if eq (len (findRE "\\.(gif|jpe?g|tiff|png|webp|bmp)$" .Destination 1)) 1}}
 		<img
 			src="{{ .Destination | safeURL }}"
 			alt="{{.Text}}"
 			{{ with .Title}} title="{{ . }}"{{ end }}
 		/>
-	{{ else if eq (len (findRE "^spotify:(.*)" .Destination 1)) 1}} <!-- Spotify -->
+	 <!-- Spotify -->
+	{{ else if eq (len (findRE "^spotify:(.*)" .Destination 1)) 1}}
 		{{$temp := (split .Destination ":")}}
 		<iframe
 			{{ with .Title}} title="{{ . }}"{{ end }}
 			src="https://open.spotify.com/embed/{{index $temp 1}}/{{index $temp 2}}"
 			frameBorder="0"
 			allow="encrypted-media"
-			style="width: 100%; max-width:400px; height:300px; border:0;margin-left: auto;margin-right: auto;display:block;"
+			style="width:100%;max-width:400px;height:300px;border:0;margin-left:auto;margin-right:auto;display:block;"
 		></iframe>
-	{{ else if eq (len (findRE "(youtube\\.com|youtu\\.?be)/.+$" .Destination 1)) 1}} <!-- Youtube -->
-		{{$videoCode := (substr .Destination (add -11 (len .Destination)) 11)}}
-		<div style="position: relative; padding-bottom: 56.25%; height: 0; overflow: hidden;">
+	<!-- Youtube -->
+	{{ else if eq (len (findRE "(youtube\\.com|youtu\\.?be)/.+$" .Destination 1)) 1}}
+		{{$temp := strings.TrimPrefix "watch?v=" (index (last 1 (split .Destination "/")) 0) }}
+		{{$temp := split $temp "?t="}}
+		{{$path := ""}}
+		{{if eq (len $temp) 1}}
+			{{$path = print "https://www.youtube.com/embed/" (index $temp 0)}}
+		{{else}}
+			{{$path = print "https://www.youtube.com/embed/" (index $temp 0) "?start=" (index $temp 1)}}
+		{{end}}
+		<div style="position:relative;padding-bottom:56.25%;height:0;overflow:hidden;">
 			<iframe
 				{{ with .Title}} title="{{ . }}"{{ end }}
-				src="https://www.youtube.com/embed/{{$videoCode}}"
+				src="{{$path}}"
 				allowfullscreen
-				style="position: absolute; top: 0; left: 0; width: 100%; height: 100%; border:0;"
+				style="position:absolute;top:0;left:0;width:100%;height:100%;border:0;"
 			></iframe>
+		</div>
+	<!-- Twitter -->
+	{{ else if eq (len (findRE "(twitter\\.com)/.+$" .Destination 1)) 1}} 
+		<blockquote class="twitter-tweet tw-align-center">
+			<a
+				href="{{.Destination}}"
+			></a>
+		</blockquote>
+		<script async defer src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+	<!-- Facebook -->
+	{{ else if eq (len (findRE "(facebook\\.com)/.+$" .Destination 1)) 1}}
+		<script async defer crossorigin="anonymous" src="https://connect.facebook.net/en_US/sdk.js#xfbml=1&version=v7.0"></script>
+		<div style="text-align:center">
+			<div
+				class="fb-post"
+				data-href="{{.Destination}}"
+				data-show-text="true"
+				data-width="350"
+				style="display:inline-block"
+			></div>
 		</div>
 	{{else}}
 		<div>Unknown Content</div>
 	{{end}}
 	<figcaption>
-		{{ htmlUnescape .Text }}
+		{{ safeHTML (htmlUnescape .Text) }}
 	</figcaption>
 </figure>
